--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -1,6 +1,7 @@
 database.url=jdbc:postgresql://localhost:5432/restaurant
 database.username=user
 database.password=password
+database.driverClassName=org.postgresql.Driver
 
 database.init=true
 jdbc.initLocation=initDB.sql
