--- a/src/main/resources/db/hsqldb.properties
+++ b/src/main/resources/db/hsqldb.properties
@@ -1,4 +1,4 @@
-#database.url=jdbc:hsqldb:file:D:/temp/topjava
+#database.url=jdbc:hsqldb:file:D:/temp/restaurant
 
 database.url=jdbc:hsqldb:mem:restaurant
 database.username=sa
